# epcis-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
epcis-cli/: Cargo.toml  README.md
epcis-cli/src/: main.rs
epcis-cli/tests/: cli_tests.rs
epcis-hash/: Cargo.toml  README.md
epcis-hash/benches/: hash_bench.rs
epcis-hash/src/: error.rs  lib.rs
epcis-hash/tests/: integration_tests.rs
epcis-models/: Cargo.toml  README.md
epcis-models/src/: cbv.rs  document.rs  error.rs  events.rs  lib.rs  types.rs  validation.rs  xml.rs
epcis-translate/: Cargo.toml  README.md
epcis-translate/benches/: translation_bench.rs
epcis-translate/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: hash_json.rs  hash_xml.rs  models_xml.rs  translate_dl.rs  translate_urn.rs
