[workspace]
resolver = "2"
members = [
    "epcis-models",
    "epcis-hash",
    "epcis-translate",
    "epcis-cli",
]

[workspace.package]
version = "0.2.0"
rust-version = "1.88"
authors = ["Duma Mtungwa <duma@matangaresearch.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MATANGAresearch/epcis-sdk"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
chrono = { version = "0.4.45", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = { version = "0.28.0" }
sha2 = { version = "0.11.0" }
quick-xml = { version = "0.41.0", features = ["serialize"] }
regex = { version = "1.12.4" }
thiserror = { version = "2.0.18" }
wasm-bindgen = { version = "0.2.126" }
criterion = { version = "0.8.2" }
epcis-models = { path = "./epcis-models", version = "0.2.0" }
epcis-translate = { path = "./epcis-translate", version = "0.2.0" }
