[package]
name = "epcis-cli"
version = { workspace = true }
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command line interface for EPCIS event hashing and identifier translation"

[dependencies]
epcis-models = { path = "../epcis-models", version = "0.2.0" }
epcis-hash = { path = "../epcis-hash", version = "0.2.0" }
epcis-translate = { path = "../epcis-translate", version = "0.2.0" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
