[package]
name = "epcis-hash"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Duma Mtungwa <duma@matangaresearch.com>"]
description = "Deterministic SHA-256 canonical hashing implementation for GS1 EPCIS 2.0 events."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MATANGAresearch/epcis-sdk"
documentation = "https://docs.rs/epcis-hash"
readme = "README.md"
keywords = ["epcis", "gs1", "hash", "sha256", "canonicalization"]
categories = ["encoding", "cryptography"]

[dependencies]
epcis-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
epcis-translate = { workspace = true }
