[package]
name = "epcis-hash"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Deterministic SHA-256 canonical hashing implementation for GS1 EPCIS 2.0 events."
documentation = "https://docs.rs/epcis-hash"
readme = "README.md"
keywords = ["epcis", "gs1", "hash", "sha256", "canonicalization"]
categories = ["encoding", "cryptography"]

[dependencies]
epcis-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
epcis-translate = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

