[package]
name = "epcis-models"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Duma Mtungwa <duma@matangaresearch.com>"]
description = "Type-safe GS1 EPCIS 2.0 event models implemented natively in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MATANGAresearch/epcis-sdk"
documentation = "https://docs.rs/epcis-models"
readme = "README.md"
keywords = ["epcis", "gs1", "tracking", "supply-chain", "serialization"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
