[package]
name = "epcis-models"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Type-safe GS1 EPCIS 2.0 event models implemented natively in Rust."
documentation = "https://docs.rs/epcis-models"
readme = "README.md"
keywords = ["epcis", "gs1", "tracking", "supply-chain", "serialization"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
