[package]
name = "epcis-translate"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Duma Mtungwa <duma@matangaresearch.com>"]
description = "Zero-allocation bidirectional translators for GS1 identifiers (SGTIN, SSCC, SGLN, GIAI, GRAI)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MATANGAresearch/epcis-sdk"
documentation = "https://docs.rs/epcis-translate"
readme = "README.md"
keywords = ["epcis", "gs1", "urn", "digital-link", "sgtin"]
categories = ["parser-implementations", "encoding"]

[dependencies]
epcis-models = { workspace = true }
serde = { workspace = true }
