[package]
name = "epcis-translate"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Zero-allocation bidirectional translators for GS1 identifiers (SGTIN, SSCC, SGLN, GIAI, GRAI)."
documentation = "https://docs.rs/epcis-translate"
readme = "README.md"
keywords = ["epcis", "gs1", "urn", "digital-link", "sgtin"]
categories = ["parser-implementations", "encoding"]

[dependencies]
epcis-models = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
wasm = ["dep:wasm-bindgen"]


[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "translation_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


